pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-www-host.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-www-host
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: www.host.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
